--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -73,27 +73,27 @@
             <aside class="sidebar-menu">
               <ul>
                 <li>
-                  <a href="/vistoriapedidos"><img src="imagens/checkadm.png" class="icones" alt="Pedidos"></a>
+                  <a href="/vistoriapedidos"><img src="imagens/check.svg" class="icones" alt="Pedidos"></a>
                   Pedidos
                 </li>
                 <li>
-                  <a href="/vistoriaprodutos"><img src="imagens/adicionaradm.png" class="icones" alt="Produtos"></a>
+                  <a href="/vistoriaprodutos"><img src="imagens/add produto.svg" class="icones" alt="Produtos"></a>
                   Produtos
                 </li>
                 <li>
-                  <a href="/administradorperfis"><img src="imagens/adm.png" class="icones" alt="Perfis"></a>
+                  <a href="/administradorperfis"><img src="imagens/adm.svg" class="icones" alt="Perfis"></a>
                   Administrador de Perfis
                 </li>
                 <li>
-                  <a href="/denuncias"><img src="imagens/denuncias.png" class="icones" alt="Denúncias"></a>
+                  <a href="/denuncias"><img src="imagens/denuncias.svg" class="icones" alt="Denúncias"></a>
                   Denúncias
                 </li>
                 <li>
-                  <a href="/perfilpremium"><img src="imagens/premium icone.png" class="icones" alt="Premium"></a>
+                  <a href="/perfilpremium"><img src="imagens/planos premium.svg" class="icones" alt="Premium"></a>
                   Perfil Premium
                 </li>
                 <li>
-                  <a href="/blogadm"><img src="imagens/icone blog.png" class="icones" alt="Blog"></a>
+                  <a href="/blogadm"><img src="imagens/blog.svg" class="icones" alt="Blog"></a>
                   Blog
                 </li>
               </ul>
