--- a/app/public/css/menu.css
+++ b/app/public/css/menu.css
@@ -67,12 +67,13 @@ nav a {
     height: auto;
 }
 
-.maria{
-     width: 40px;
-     height: 40px;
-     border-radius: 50%;
-     object-fit: cover;
-}
+.maria {
+    width: 60px;
+    height: 60px;
+    border-radius: 50% !important;
+    object-fit: cover !important;
+  }
+
 
 .profile-container {
     width: 40px;
