--- a/app/views/pages/entrar.ejs
+++ b/app/views/pages/entrar.ejs
@@ -19,7 +19,7 @@
         </a>
         <img src="imagens/logo.png" alt="Logo">
         <a href="/carrinho">
-          <img src="imagens/carrinho.png" alt="Carrinho">
+          <img src="imagens/foto-branca.png" alt="Carrinho">
         </a>
       </nav>
     </header>
