--- a/app/public/css/entrar.css
+++ b/app/public/css/entrar.css
@@ -50,17 +50,17 @@
   }
   
   .description {
-    font-size: 40px;
+    font-size: 36px;
     color: #7c7c7c;
     text-align: center;
     margin-bottom: 20px;
     padding: 20px;
+    font-family: 'Raleway', sans-serif;
   }
   
   .social-login {
     display: flex;
     justify-content: center;
-    gap: 50px;
     margin-bottom: 30px;
     padding: 20px;
   }
@@ -78,11 +78,12 @@
   }
   
 .divider {
-  font-size: 32px;
+  font-size: 30px;
   color: #888;
   margin: 20px 0;
   position: relative;
   text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
 .divider::before, .divider::after {
   content: '';
@@ -106,10 +107,12 @@
 /*                                                  formulário                                                         */
 .form-group label {
   font-size: 28px;
-  color: #333;
+  color: #7c7c7c;
   margin-bottom: 10px;
-  display: block;
+  display: block; 
+  font-family: 'Raleway', sans-serif;
 }
+
 .form-group input {
   width: 100%;
   padding: 30px;
@@ -125,7 +128,7 @@
   margin-top: 5px;
 }
 .checkbox-group {
-  margin: 30px 0;
+  margin: 100px 0;
 }
 
 .stay-connected {
@@ -179,7 +182,6 @@ input[type="checkbox"]:checked + .toggle:before {
   .form-group input {
     width: 100%;
     padding: 20px;
-    border: 2px solid #7D2838;
     border-radius: 25px;
     font-size: 40px;
     margin-bottom: 15px;
@@ -213,7 +215,7 @@ input[type="checkbox"]:checked + .toggle:before {
     text-align: right;
     margin-bottom: 20px;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 16px;
     font-family: 'Raleway', sans-serif;
   }
   
